--- a/app.json
+++ b/app.json
@@ -10,11 +10,11 @@
       "value": ""
     },
     "GJ_CODE":{
-      "description": "地区代码，HK,SG,US  ISO_3166-1",
+      "description": "Region code，HK,SG,US  ISO_3166-1",
       "value": "US"
     },
     "SITE_NAME":{
-      "description": "站点名字",
+      "description": "Site name",
       "value": "Y2"
     },
     "TITLENAME":{
@@ -22,11 +22,11 @@
       "value": "Y2"
     },
     "EN2DEKEY":{
-      "description": "加/解密密钥，随机字符串即可",
+      "description": "Encryption code (random code)",
       "value": "ZgN2tj1ETs"
     },
     "EMAIL":{
-      "description": "邮箱",
+      "description": "Email",
       "value": ""
     }
   }
